<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (c) 2022 CEA, Obeo.
 This program and the accompanying materials
 are made available under the terms of the Eclipse Public License v2.0
 which accompanies this distribution, and is available at
 https://www.eclipse.org/legal/epl-2.0/

 SPDX-License-Identifier: EPL-2.0

 Contributors:
     Obeo - initial API and implementation
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.6</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>papyrus-web</groupId>
	<artifactId>papyrus-web-graphql</artifactId>
	<version>2023.3.0</version>
	<name>papyrus-web-graphql</name>
	<description>Papyrus Web GraphQL</description>

	<properties>
		<java.version>17</java.version>
		<sirius.components.version>2023.4.1</sirius.components.version>
	</properties>

	<repositories>
		<repository>
			<id>Central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>github-sirius-components</id>
			<url>https://maven.pkg.github.com/eclipse-sirius/sirius-components</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-interpreter</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-annotations</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-annotations-spring</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-graphql-api</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>papyrus-web</groupId>
			<artifactId>papyrus-web-services-api</artifactId>
			<version>2023.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-collaborative</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-collaborative-diagrams</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-collaborative-formdescriptioneditors</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-collaborative-forms</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-collaborative-selection</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-collaborative-trees</artifactId>
			<version>${sirius.components.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-tests</artifactId>
			<version>${sirius.components.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sirius</groupId>
			<artifactId>sirius-components-spring-tests</artifactId>
			<version>${sirius.components.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
